--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kimika - Coleção Festa</title>
     <style type="text/css">
-        /* Resets básicos para clientes de email */
+        /* Resets para evitar espaços e bordas indesejadas */
         body { margin: 0; padding: 0; min-width: 100%; background-color: #FFFFFF; }
         table { border-collapse: collapse; mso-table-lspace: 0pt; mso-table-rspace: 0pt; }
         img { display: block; border: 0; height: auto; line-height: 100%; outline: none; text-decoration: none; }
-        a { text-decoration: none; }
+        a { text-decoration: none; border: none; }
     </style>
 </head>
 <body bgcolor="#FFFFFF" style="margin: 0; padding: 0;">
@@ -17,19 +17,21 @@
     <table width="100%" border="0" cellspacing="0" cellpadding="0" bgcolor="#FFFFFF">
         <tr>
             <td align="center">
-
+                
                 <table width="600" border="0" cellspacing="0" cellpadding="0" style="width: 600px; max-width: 600px;">
-
+                    
                     <tr>
                         <td align="center" style="font-size: 0; line-height: 0;">
-                            <img src="https://i.imgur.com/R8kU5Kn.png" width="600" alt="Kimika - Coleção Especial Festa" style="display: block; width: 100%; max-width: 600px; height: auto;">
+                            <a href="https://www.kimika.com.br/festa" target="_blank" title="Conheça a Coleção Festa">
+                                <img src="https://i.imgur.com/R8kU5Kn.png" width="600" alt="Kimika - Coleção Especial Festa" style="display: block; width: 100%; max-width: 600px; height: auto;">
+                            </a>
                         </td>
                     </tr>
 
                     <tr>
                         <td align="center" style="font-size: 0; line-height: 0;">
                             <a href="https://www.kimika.com.br/vestido-longo-de-paete-dourado" target="_blank" title="Ver Detalhes do Vestido Longo de Paetê Dourado">
-                                <img src="https://i.imgur.com/ZXo0w8J.png" width="600" alt="Vestido Longo de Paetê Dourado - Elegância Kimika" style="display: block; width: 100%; max-width: 600px; height: auto;">
+                                <img src="https://i.imgur.com/ZXo0w8J.png" width="600" alt="Vestido Longo de Paetê Dourado" style="display: block; width: 100%; max-width: 600px; height: auto;">
                             </a>
                         </td>
                     </tr>
@@ -61,7 +63,7 @@
                     <tr>
                         <td align="center" style="font-size: 0; line-height: 0;">
                             <a href="https://www.kimika.com.br/festa" target="_blank" title="Confira a Coleção Festa Completa">
-                                <img src="https://i.imgur.com/gFmYRDL.png" width="600" alt="Confira toda a Coleção Festa Kimika" style="display: block; width: 100%; max-width: 600px; height: auto;">
+                                <img src="https://i.imgur.com/gFmYRDL.png" width="600" alt="Ver Coleção Completa" style="display: block; width: 100%; max-width: 600px; height: auto;">
                             </a>
                         </td>
                     </tr>
@@ -70,5 +72,6 @@
                 </td>
         </tr>
     </table>
-    </body>
+
+</body>
 </html>
