--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                     <tr>
                         <td align="center" style="font-size: 0; line-height: 0;">
                             <a href="https://www.kimika.com.br/vestido-longo-texturizado-dourado" target="_blank" title="Ver Detalhes do Vestido Longo Verde">
-                                <img src="https://i.imgur.com/O0eGFIB.png" width="600" alt="Vestido Longo Manga Única Verde" style="display: block; width: 100%; max-width: 600px; height: auto;">
+                                <img src="https://i.imgur.com/FSOetBE.png" width="600" alt="Vestido Longo Manga Única Verde" style="display: block; width: 100%; max-width: 600px; height: auto;">
                             </a>
                         </td>
                     </tr>
@@ -75,4 +75,5 @@
 
 </body>
 </html>
+
 
